# LD30-Game

./: CMakeLists.txt  Game  README
include/: Game.hpp  Global.hpp  Level.hpp  Player.hpp
lib/: libGLEW.so.1.10.0  libopenal.so.1.15.1  libsfml-audio.so.2.1  libsfml-graphics.so.2.1  libsfml-network.so.2.1  libsfml-system.so.2.1  libsfml-window.so.2.1  libstdc++.so.6.0.20  libtgui.so.0.7.0
resources/: Level1.conf  Level2.conf
resources/TGUI/: Black.conf
src/: Game.cpp  Level.cpp  Player.cpp  main.cpp
